# huffman_compression

./: .gitignore  Cargo.toml  README.md  dna_seq.txt  dna_seq.txt.huff  huffcompress.huff  test_dump  testcontents.txt.huff
benches/: huffc.rs  my_benchmark.rs
src/: cli.rs  fs.rs  lib.rs  main.rs
tests/: full_cycle.rs
tests/resources/: dna_seq_test.txt
